...
                    app:srcCompat="@drawable/eventplaceholder"
                    android:contentDescription="@string/image_of_added_area"
                    android:id="@+id/ViewAddedAreaImageView"
                    android:layout_height="365dp"
                    android:layout_width="match_parent"
...
                               android:contentDescription="@string/entetainment_spot_owner"
                               android:src="@mipmap/ic_owner"
                               android:layout_weight="1" android:id="@+id/authorImageView"/>

                    <TextView
...
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaOwnerText"
                            android:textColor="@color/colorPrimaryText"/>
                </android.support.v7.widget.LinearLayoutCompat>
...

                    <ImageView
                        android:id="@+id/navigationImageView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaAddressText"
                            android:textColor="@color/colorPrimaryText"/>

...
                               android:contentDescription="@string/entertainment_spot_description"
                               android:src="@mipmap/ic_description"
                               android:layout_weight="1" android:id="@+id/descriptImageView"/>

                    <TextView
...
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaDescText"
                            android:textColor="@color/colorPrimaryText"/>

...
                               android:layout_height="47dp"
                               android:layout_weight="1"
                               android:id="@+id/averageCostImageView"
                               app:srcCompat="@android:drawable/ic_menu_info_details"
                               tools:ignore="ContentDescription"/>
...
                        <Spinner android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:id="@+id/averageCostSpinner"
                                 android:popupBackground="@color/colorPrimary"
                                 android:entries="@array/cost"
...

                    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
                                                            android:id="@+id/comment_recyclerView"
                                                            android:scrollbars="vertical"
                                                            android:layout_marginRight="8dp"
...
                              android:layout_weight="8"
                              android:padding="12dp" android:inputType="textMultiLine"
                              android:id="@+id/commentEditText"
                              android:hint="@string/write_a_comment"/>

...
                                 app:srcCompat="@android:drawable/ic_menu_send"
                                 android:elevation="0dp" android:tint="@color/colorWhite"
                                 android:scaleType="fitCenter" android:id="@+id/commentImageButton"
                                 android:backgroundTint="@color/colorPrimaryLight" android:contentDescription=""
                                 tools:ignore="ContentDescription"/>
...
    <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/likeFloatingActionButton"
                                                        app:elevation="6dp"
                                                        android:src="@drawable/ic_white_fav"
...
