...
        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:padding="12dp"
                                                      android:layout_weight="0.8"
                                                      android:orientation="horizontal">
            <ImageView
                    android:id="@+id/commentorProfileImageView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/default_avatar" android:contentDescription=""
                    tools:ignore="ContentDescription"/>
        </android.support.v7.widget.LinearLayoutCompat>

...
            <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:layout_height="wrap_content"
                                                          android:id="@+id/linearLayout2"
                                                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:id="@+id/commentorNameTextView"
                          android:text="@string/musa_rikhotso1"
                          android:textAlignment="textStart" android:textStyle="bold"
                          android:textSize="18sp" android:layout_height="wrap_content"
                          tools:ignore="TooDeepLayout"/>

                <MultiAutoCompleteTextView android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:id="@+id/commentMultiAutoCompleteTextView"
                                           android:focusable="false"
                                           android:layout_below="@+id/commentorNameTextView"
                                           android:text="I was here last week with my friends. The food was really amazing"
                                           tools:ignore="HardcodedText,LabelFor"/>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
...
                        <android.support.v7.widget.LinearLayoutCompat android:layout_width="0dp"
                                                                      android:layout_height="match_parent"
                                                                      android:layout_weight="4">
                            <TextView android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:gravity="center"
                                      android:id="@+id/dateTextView" android:text="@string/_2017_08_20_14_00pm"
                                      android:textSize="14sp"/>

                        </android.support.v7.widget.LinearLayoutCompat>

                        <android.support.v7.widget.LinearLayoutCompat android:layout_width="0dp"
                                                                      android:layout_height="match_parent"
...
                                                                          android:paddingEnd="8dp"
                                                                          android:paddingBottom="8dp"
                                                                          android:id="@+id/ownerLinearlayout">

                                <TextView android:layout_width="0dp"
                                          android:layout_height="match_parent"
                                          android:id="@+id/likeTextView"
                                          android:layout_weight="4" android:text="@string/likes"
                                          android:gravity="center"
                                          android:foregroundTint="@color/colorPrimaryLight"
                                          android:textColor="@color/colorPrimary" android:textSize="18sp"
                                          tools:targetApi="m" android:textAlignment="textStart"
                                          tools:ignore="RtlCompat"/>
...
                                        android:layout_weight="6"
                                        android:paddingStart="5dp"
                                        android:paddingEnd="5dp"
                                        android:gravity="center"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:id="@+id/likeCommentCounterTextView"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="18sp"
                                        android:textColorHighlight="@color/colorPrimary" android:text="@string/_22"
                                        tools:ignore="SpUsage"/>
                            </android.support.v7.widget.LinearLayoutCompat>

...
