...
        android:layout_height="wrap_content" android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/entertainmentSpotRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
...
